fixing the alignments

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -171,6 +171,9 @@ footer img {
 		display:block;
 		z-index:99;
 	}
+	img{
+		cursor:pointer;
+	}
 }
 .sidenav {
     height: 100%;
